# movie-search-5000

./: .gitignore  CLAUDE.md  README.md  STUDY_NOTES.md  pyproject.toml  test_agent_graph.py  test_agent_run.py  test_gemini.py
api/: main.py
cli/: augmented_generation_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  semantic_search_cli.py
cli/lib/: __init__.py  hybrid_search.py  inverted_index.py  local_llm.py  semantic_search.py
gui/: keyword_search_gui.py
web/: designGuidelines.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  api.js  index.css
web/src/components/: Button.jsx  Card.jsx  ChatInterface.jsx  HitCounter.jsx  Input.jsx  Marquee.jsx  SearchResult.jsx
