[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "nltk==3.9.1",
    "numpy>=2.4.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.40.0",
]
